# summerorbital

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Orbital 2025.sln  Orbital 2025.vcxproj  Orbital 2025.vcxproj.filters  README.md  SpacedOut  TextureManager.cpp  TextureManager.hpp  backend_stuff.sln  backend_stuff.vcxproj  backend_stuff.vcxproj.filters  client  main.cpp  my_sdl_app  prog  server  test
AstroEngine/: AstroEngine  AstroEngine.sln  CMakeLists.txt  client
AstroEngine/AstroEngine/: AstroEngine.cpp  AstroEngine.vcxproj  AstroEngine.vcxproj.filters
AstroEngine/AstroEngine/Debug/: vc143.idb
AstroEngine/Src/: AssetManager.cpp  AssetManager.h  Client.cpp  Client.h  ClientData.cpp  ClientData.h  Collision.cpp  Collision.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  Packet.h  Scene.h  SceneInstance.cpp  SceneInstance.h  Server.cpp  Server.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp
AstroEngine/Src/Components/: AnimationComponent.h  (+12 more)
AstroEngine/assets/: lolol.kra  map.map
Intel® VTune™ Profiler Results/backend_stuff/: backend_stuff.vtuneproj
New folder/: Game.cpp  Game.hpp  main  main.cpp
assets/: .shipSprite.png-autosave.kra  HP_BAR_SRC.kra  HealthBar.png~  HealthMeter.png~  PlayAgainBtn.kra  shipSprite.png~
backend/: AstroEngineServer.cpp  main.cpp
backend/Client/: b.out  client  main.cpp
backend/Server/: main.cpp  server
backend/enet-1.3.18/: Makefile  callbacks.lo  compress.lo  config.status  host.lo  libenet.la  libtool  packet.lo  peer.lo  protocol.lo  unix.lo  win32.lo
backend_new/: backend_stuff.vcxproj
extra_assets/Krita/: Border_Line3.kra
glad/src/: glad.c
surfaces/: main.cpp  prog
(+106 files in other folders)
